Introduced `TestsSourceVersionInfo` as replacement for `TestSuitesSourceSnapshotKey` (#1722)
