# save-backend/src/main/kotlin/com/saveourtool/save/backend/controllers/TestSuitesSourceController.kt
@@ -3,16 +3,18 @@ package com.saveourtool.save.backend.controllers
 import com.saveourtool.save.backend.ByteBufferFluxResponse
 import com.saveourtool.save.backend.StringResponse
 import com.saveourtool.save.backend.service.*
-import com.saveourtool.save.backend.storage.TestSuitesSourceSnapshotStorage
 import com.saveourtool.save.backend.utils.toResponseEntity
 import com.saveourtool.save.configs.ApiSwaggerSupport
 import com.saveourtool.save.configs.RequiresAuthorizationSourceHeader
 import com.saveourtool.save.domain.EntitySaveStatus
 import com.saveourtool.save.entities.*
 import com.saveourtool.save.entities.TestSuitesSource.Companion.toTestSuiteSource
+import com.saveourtool.save.test.TestsSourceVersionInfo
+import com.saveourtool.save.test.TestsSourceVersionInfoList
 import com.saveourtool.save.testsuite.*
 import com.saveourtool.save.utils.*
 import com.saveourtool.save.v1
+
 import io.swagger.v3.oas.annotations.Operation
 import io.swagger.v3.oas.annotations.Parameter
 import io.swagger.v3.oas.annotations.Parameters
@@ -34,6 +36,9 @@ import reactor.kotlin.core.publisher.toMono
 import reactor.kotlin.core.util.function.component1
 import reactor.kotlin.core.util.function.component2
 
+import kotlinx.datetime.TimeZone
+import kotlinx.datetime.toLocalDateTime
+
 typealias EntitySaveStatusResponse = ResponseEntity<EntitySaveStatus>
 typealias StringListResponse = ResponseEntity<List<String>>
 
@@ -48,7 +53,7 @@ typealias StringListResponse = ResponseEntity<List<String>>
 @Suppress("LongParameterList")
 class TestSuitesSourceController(
     private val testSuitesSourceService: TestSuitesSourceService,
-    private val testSuitesSourceSnapshotStorage: TestSuitesSourceSnapshotStorage,
+    private val testsSourceVersionService: TestsSourceVersionService,
     private val testSuitesService: TestSuitesService,
     private val organizationService: OrganizationService,
     private val gitService: GitService,
@@ -135,6 +140,7 @@ class TestSuitesSourceController(
         responseCode = "404",
         description = "Either organization was not found by provided name or test suites source with such name in organization name was not found.",
     )
+    @Suppress("TOO_MANY_LINES_IN_LAMBDA")
     fun uploadSnapshot(
         @PathVariable organizationName: String,
         @PathVariable sourceName: String,
@@ -142,12 +148,22 @@ class TestSuitesSourceController(
         @RequestParam creationTime: Long,
         @RequestPart("content") contentAsMonoPart: Mono<Part>
     ): Mono<Unit> = findAsDtoByName(organizationName, sourceName)
-        .map { TestSuitesSourceSnapshotKey(it, version, creationTime) }
+        .map {
+            val parsedCreationTime = creationTime.millisToInstant().toLocalDateTime(TimeZone.UTC)
+            TestsSourceVersionInfo(
+                organizationName = it.organizationName,
+                sourceName = it.name,
+                version = version,
+                creationTime = parsedCreationTime,
+                commitId = version,
+                commitTime = parsedCreationTime,
+            )
+        }
         .flatMap { key ->
             contentAsMonoPart.flatMap { part ->
                 val content = part.content().map { it.asByteBuffer() }
-                testSuitesSourceSnapshotStorage.upload(key, content).map { writtenBytes ->
-                    log.info { "Saved ($writtenBytes bytes) snapshot of ${key.testSuitesSourceName} in ${key.organizationName} with version $version" }
+                testsSourceVersionService.upload(key, content).map { writtenBytes ->
+                    log.info { "Saved ($writtenBytes bytes) snapshot of ${key.sourceName} in ${key.organizationName} with version $version" }
                 }
             }
         }
@@ -214,7 +230,7 @@ class TestSuitesSourceController(
         @RequestParam version: String,
     ): Mono<Boolean> = findAsDtoByName(organizationName, sourceName)
         .flatMap {
-            testSuitesSourceSnapshotStorage.doesContain(it.organizationName, it.name, version)
+            testsSourceVersionService.doesContain(it.organizationName, it.name, version)
         }
 
     @GetMapping(
@@ -243,9 +259,9 @@ class TestSuitesSourceController(
     fun listSnapshotVersions(
         @PathVariable organizationName: String,
         @PathVariable sourceName: String,
-    ): Mono<TestSuitesSourceSnapshotKeyList> = findAsDtoByName(organizationName, sourceName)
+    ): Mono<TestsSourceVersionInfoList> = findAsDtoByName(organizationName, sourceName)
         .flatMap {
-            testSuitesSourceSnapshotStorage.list(it.organizationName, it.name)
+            testsSourceVersionService.list(it.organizationName, it.name)
                 .collectList()
         }
 
@@ -268,10 +284,9 @@ class TestSuitesSourceController(
     @ApiResponse(responseCode = "404", description = "Organization was not found by provided name.")
     fun listSnapshots(
         @PathVariable organizationName: String,
-    ): Mono<TestSuitesSourceSnapshotKeyList> = getOrganization(organizationName)
+    ): Mono<TestsSourceVersionInfoList> = getOrganization(organizationName)
         .flatMap { organization ->
-            testSuitesSourceSnapshotStorage.list()
-                .filter { it.organizationName == organization.name }
+            testsSourceVersionService.list(organization.name)
                 .collectList()
         }
 
@@ -339,12 +354,7 @@ class TestSuitesSourceController(
                 EntitySaveStatus.UPDATED -> {
                     val newName = updatedEntity.name
                     val movingSnapshots = if (originalName != newName) {
-                        testSuitesSourceSnapshotStorage.list(updatedEntity.organization.name, originalName)
-                            .map { it to it.copy(testSuitesSourceName = newName) }
-                            .flatMap { (sourceKey, targetKey) ->
-                                testSuitesSourceSnapshotStorage.move(sourceKey, targetKey)
-                            }
-                            .then()
+                        testsSourceVersionService.updateSourceName(updatedEntity.organization.name, originalName, newName)
                     } else {
                         Mono.just(Unit)
                     }
@@ -446,10 +456,7 @@ class TestSuitesSourceController(
         .map {
             testSuitesService.deleteTestSuite(it, version)
         }
-        .then(testSuitesSourceSnapshotStorage.findKey(organizationName, sourceName, version))
-        .flatMap {
-            testSuitesSourceSnapshotStorage.delete(it)
-        }
+        .then(testsSourceVersionService.delete(organizationName, sourceName, version))
 
     private fun getOrganization(organizationName: String): Mono<Organization> = blockingToMono {
         organizationService.findByNameAndCreatedStatus(organizationName)
@@ -528,7 +535,7 @@ class TestSuitesSourceController(
         authentication: Authentication,
     ): Mono<StringListResponse> = blockingToMono { testSuitesSourceService.findByName(organizationName, sourceName) }
         .flatMap { testSuitesSourceService.tagList(it.toDto()) }
-        .zipWith(testSuitesSourceSnapshotStorage.list(organizationName, sourceName)
+        .zipWith(testsSourceVersionService.list(organizationName, sourceName)
             .map { it.version }
             .collectList())
         .map { (tags, versions) ->
@@ -571,14 +578,15 @@ class TestSuitesSourceController(
 
     private fun TestSuitesSourceDto.downloadSnapshot(
         version: String
-    ): Mono<ByteBufferFluxResponse> = testSuitesSourceSnapshotStorage.findKey(organizationName, name, version)
+    ): Mono<ByteBufferFluxResponse> = testsSourceVersionService.doesContain(organizationName, name, version)
+        .filter { it }
         .switchIfEmptyToNotFound {
             "Not found a snapshot of $name in $organizationName with version=$version"
         }
         .map {
             ResponseEntity.ok()
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
-                .body(testSuitesSourceSnapshotStorage.download(it))
+                .body(testsSourceVersionService.download(organizationName, name, version))
         }
 
     companion object {
